[package]
name = "merged-config"
version = "0.1.0"
authors = ["Bruce Brown <brown.bruce1207@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BruceBrown/rust-server-project/config/merged-config"
description = "example of merging config settings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.10", path = "/Users/bruce/Projects/rust/forks/config-rs" }

smart-default = "0.6"
log = "0.4"

tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"
serde = {version = "1.0", features = ["derive"] }
serde_with = { version="1.6" }
lazy_static = "1.4"