[package]
name = "components"
version = "0.1.0"
authors = ["Bruce Brown <brown.bruce1207@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BruceBrown/rust-server-project/server/echo-service/components"
description = "Components for async machines and services"

[dependencies]
machine_impl = { path = "../machine-impl" }
machine-foundation = { path = "../machine-foundation" }
server-core = { path = "../server-core" }

smol = "1.2"
crossbeam = "0.8"
futures = "0.3.13"

atomic_refcell = "0.1"
smart-default = "0.6"
super-slab = "0.1.0"
log = "0.4"