[package]
name = "machine_impl"
version = "0.1.0"
authors = ["Bruce Brown <brown.bruce1207@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BruceBrown/rust-server-project/server/echo-service/machine-impl"
description = "Derive Macro for async machines and services"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"

[dev-dependencies]
server-core = { path = "../server-core" }
machine-foundation = { path = "../machine-foundation" }
smol = "1.2"