[package]
name = "server-core"
version = "0.1.0"
authors = ["Bruce Brown <brown.bruce1207@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BruceBrown/rust-server-project/server/echo-service/server-core"
description = "Core for async machines and services"

[dependencies]
smol = "1.2"
smart-default = "0.6"
futures = "0.3.13"
log = "0.4"
crossbeam = "0.8"
async-trait = "0.1"
uuid = { version = "0.8", default-features = false, features = ["v4"] }
num_cpus = "1.13"
once_cell = "1.6"

[dev-dependencies]
simplelog = "0.8"