[package]
name = "example-echo-service"
version = "0.1.0"
authors = ["Bruce Brown <brown.bruce1207@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BruceBrown/rust-server-project/server/echo-service/examples/echo-service"
description = "Example of an echo service for async machines and services"

[lib]
name = "echo_service"
path = "src/lib.rs"

[[bin]]
name = "example-echo-service"
path = "src/main.rs"

[dependencies]
machine_impl = { path = "../../machine-impl" }
server-core = { path = "../../server-core" }
machine-foundation = { path = "../../machine-foundation" }
components = { path = "../../components" }
config-service = { path = "../config-service" }

config = { version = "0.10" }
smol = "1.2"
smart-default = "0.6"
log = "0.4"
simplelog = "0.8"