[package]
name = "driver"
version = "0.1.0"
authors = ["Bruce Brown <brown.bruce1207@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BruceBrown/rust-server-project/server/echo-service/tests/driver"
description = "Test driver for async machines and services"

[dependencies]
instruction-set = { path = "../../examples/instruction-set" }
machine-foundation = { path =  "../../machine-foundation" }
server-core = { path =  "../../server-core" }

smol = "1.2"
smart-default = "0.6"
rand = "0.7"
parking_lot = "0.11"
log = "0.4"
